--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,9 @@
 body {
   padding: 0;
   font-family: Georgia, serif;
+  background-color: white;
+  margin: 0 auto;
+  width: 960px;
 }
 @font-face {
   font-family: 'OldeEnglish';
