--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -10,6 +10,9 @@
 body {
     padding: 0;
     font-family: Georgia, serif;
+    background-color: white;
+    margin: 0 auto;
+    width: 960px;
 }
 @font-face {
     font-family: 'OldeEnglish';
