--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,12 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face{
+  font-familt:"Georgia";
+  src: url('../fonts/Georgia') format('truetype');
+}
+
 body {
   padding: 0;
   font-family: 'Georgia', serif;
@@ -46,4 +52,5 @@ h1 {
   line-height: 40px;
   padding-bottom: 19px;
 }
+
 /* Responsive: Portrait tablets and up */
