--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,15 +15,13 @@ body {
   font-family: 'Georgia', serif;
   background-color: white;
   margin: 0 auto;
-  width: 960px;
+  width: 1000px;
   -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
   -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
   box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
 }
 
-h2,
-h3,
-h4 {
+h2,h3 {
   font-family: 'Georgia', sans-serif;
 }
 
