--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,9 +13,8 @@
 body {
   padding: 5em 5em 5em 5em;
   font-family: 'Georgia', serif;
-  background-color: white;
   margin: 0 auto;
-  width: 1000px;
+  width: 80%;
   -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
   -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
   box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
