--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,7 @@
 body {
   padding: 5em 5em 5em 5em;
   font-family: 'Georgia', serif;
+  background:url('images/bg.jpg') repeat;
   margin: 0 auto;
   width: 80%;
   -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
