Started organizing month selection

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -22,11 +22,6 @@ h1,h2,h3,h4 {
 h1 {
     font-size: 3em;
 }
-*[ng-view] {
-    border: 1px solid black;
-    min-width: 100px;
-    min-height: 100px;
-}
 .container {
     align-items: flex-start;
     flex-grow: 1;
@@ -48,6 +43,13 @@ h1 {
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
+}
+
+#FirstTitle {
+    background-color: #0875DE;
+    display: inline-block;
+    color: #FFFFFF;
+    padding: .2em 5em .2em 1em;
 }
 
 /* Responsive: Portrait tablets and up */
