--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -81,14 +81,17 @@ p{font-family: 'Georgia',sans-serif;}
 #current-month section{
 	border:5px #CB6D62 solid;
 	border-radius: 0px 0px 10px 10px;
-	padding: 1.5em 1.5em;
+	padding: 0.5em 0.5em;
+  font-size: 25px;
+  text-align: center;
 }
 
-
-td{
-	border:5px #CB6D62 solid;
-	border-radius: 0px 0px 10px 10px;
-	padding: 1.5em 1.5em;
+#tagCloud {
+    width: 75%;
+}
+#tagCloud .keyword {
+  padding: 2px;
+  color: #005580;
 }
 
 
@@ -124,17 +127,12 @@ td{
 
 }
 
-#momths{
-	width:300px; !important
+#monthList {
+	width: 20% !important;
 }
-
-
-
-#months td{
-	border:3px solid; /* #{{MonthsSentiment}} */
-	border-radius: 0px 0px 5px 5px;
+#monthList button {
+	border:1px solid; /* #{{MonthsSentiment}} */
 	padding:.5em .5em;
 	font-size: 25px;
-
+  width: 33%;
 }
-
