--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -21,7 +21,7 @@ body {
   box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
 }
 
-h2,h3 {
+h2,h3, h5 {
   font-family: 'Georgia', sans-serif;
 }
 
@@ -61,7 +61,18 @@ p{font-family: 'Georgia',sans-serif;}
 }
 
 #FirstTitle {
-  background-color: #0875DE;
+	background: -moz-linear-gradient(left,  rgba(30,87,153,1) 0%, rgba(124,255,246,0.24) 100%); /* FF3.6+ */
+	
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(124,255,246,0.24))); /* Chrome,Safari4+ */
+	
+	background: -webkit-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* Chrome10+,Safari5.1+ */
+	
+	background: -o-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* Opera 11.10+ */
+	
+	background: -ms-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* IE10+ */
+	
+	background: linear-gradient(to right,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* W3C */
+
   display: inline-block;
   color: #FFFFFF;
   padding: .2em 5em .2em 1em;
