--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -62,15 +62,15 @@ p{font-family: 'Georgia',sans-serif;}
 
 #FirstTitle {
 	background: -moz-linear-gradient(left,  rgba(30,87,153,1) 0%, rgba(124,255,246,0.24) 100%); /* FF3.6+ */
-	
+
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(124,255,246,0.24))); /* Chrome,Safari4+ */
-	
+
 	background: -webkit-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* Chrome10+,Safari5.1+ */
-	
+
 	background: -o-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* Opera 11.10+ */
-	
+
 	background: -ms-linear-gradient(left,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* IE10+ */
-	
+
 	background: linear-gradient(to right,  rgba(30,87,153,1) 0%,rgba(124,255,246,0.24) 100%); /* W3C */
 
   display: inline-block;
@@ -176,4 +176,8 @@ p{font-family: 'Georgia',sans-serif;}
 	padding:.5em .5em;
 	font-size: 25px;
   width: 33%;
+}
+
+.c3-chart > * {
+    cursor: help !important;
 }
