--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,187 +1,196 @@
 @font-face {
-  font-family: 'OldeEnglish';
-  src: url('../fonts/OldeEnglish.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'OldeEnglish';
+    src: url('../fonts/OldeEnglish.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-@font-face{
-  font-family:"Georgia";
-  src: url('../fonts/Georgia') format('truetype');
+@font-face {
+    font-family: "Georgia";
+    src: url('../fonts/Georgia') format('truetype');
 }
 
 body {
-  padding: 0em 5em 5em 5em;
-  font-family: 'Georgia', serif;
-  background:url(../images/bg.jpg) repeat;
-  margin: 0 auto;
-  width: 80%;
-  -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-  -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-  box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
+    padding: 0em 5em 5em 5em;
+    font-family: 'Georgia', serif;
+    background: url(../images/bg.jpg) repeat;
+    margin: 0 auto;
+    width: 80%;
+    -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    height: auto;
 }
 
-h2,h3, h5, h4 {
-  font-family: 'Georgia', sans-serif;
+h2, h3, h5, h4 {
+    font-family: 'Georgia', sans-serif;
 }
 
-h1{
-  font-family: 'OldeEnglish', sans-serif;
-  font-size: 3em;
+h1 {
+    font-family: 'OldeEnglish', sans-serif;
+    font-size: 3em;
 }
 
-p{font-family: 'Georgia',sans-serif;}
+p {
+    font-family: 'Georgia', sans-serif;
+}
 
 *[ng-view] {
-  border: 1px solid black;
-  border-radius: 0px 0px 10px 10px;
-  min-width: 100px;
-  min-height: 100px;
+    border: 1px solid black;
+    border-radius: 0px 0px 10px 10px;
+    min-width: 100px;
+    min-height: 100px;
 }
+
 .container {
-  align-items: flex-start;
-  flex-grow: 1;
-  display: flex;
-  justify-content: space-between;
+    align-items: flex-start;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
 }
+
 .container > * {
-  display: inline-block;
+    display: inline-block;
 }
+
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 10px;
 }
+
+.label {
+    margin: .5em 2em .5em 0 !important;
+}
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
 }
 
 #FirstTitle {
-	
-  display: inline-block;
-  color: #FFFFFF;
-  margin: .5em 2em .5em 0;
+
+    display: inline-block;
+    color: #FFFFFF;
 }
 
-#obituaries {
-	margin: .5em 2em .5em 0;
+#current-month {
+    margin-top: 2em;
+    width: 10em;
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    border-radius: 0px 0px 10px 10px;
 }
 
-
-#current-month{
-	margin-top: 2em;
-	width:10em;
-	height:8em;
-	background-color:#ffffff;
-	-webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-	-moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-}
-#current-month p{
-	padding:0;
-	margin:0;
-	background-color: #CB6D62;
-	color:white;
-	text-align: center;
-	font-size:3em;
+#current-month p {
+    padding: 0;
+    margin: 0;
+    background-color: #CB6D62;
+    color: white;
+    text-align: center;
+    font-size: 3em;
 }
 
-#current-month section{
-	border:5px #CB6D62 solid;
-	border-radius: 0px 0px 10px 10px;
-	padding: 0.5em 0.5em;
-	font-size: 25px;
-	text-align: center;
-	background-color:#ffffff;
+#current-month section {
+    border: 5px #CB6D62 solid;
+    border-radius: 0px 0px 10px 10px;
+    padding: 0.5em 0.5em;
+    font-size: 25px;
+    text-align: center;
+    background-color: #ffffff;
 }
 
 #tagCloud {
     width: 75%;
-	height:auto;
-	border:#A6A6A6 1px solid;
-	background-color:#FFFFFF;
-	padding:1em 1em;
+    height: auto;
+    border: #A6A6A6 1px solid;
+    background-color: #FFFFFF;
+    padding: 1em 1em;
 
 }
+
 #tagCloud span {
-  display:inline-block;
-  line-height:20px;
-  padding: 2px;
-  color:#535353;
-  font-size:16px;
-   word-wrap: break-word;
-  float:left;
+    display: inline-block;
+    line-height: 20px;
+    padding: 2px;
+    color: #535353;
+    font-size: 16px;
+    word-wrap: break-word;
+    float: left;
     cursor: pointer;
 }
 
-.major-news{
-    border:1px solid #ADABAB;
+.major-news {
+    border: 1px solid #ADABAB;
     padding: 2em 3em 2em 3em;
-    -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-    -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-    box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
 }
 
-.major-news
-	{
-	border:1px solid #ADABAB;
-	background-color:#ffffff;
-	padding: 2em 3em 2em 3em;
-	-webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-	-moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
-	box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.53);
+.major-news {
+    border: 1px solid #ADABAB;
+    background-color: #ffffff;
+    padding: 2em 3em 2em 3em;
+    -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
+    box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
 }
-.major-news h2{
-	text-align: center;
+
+.major-news h2 {
+    text-align: center;
 }
 
 .major-news p {
     text-align: justify;
 }
 
-#title h1{
-	font-size:100px;
-	text-decoration:none;
-	color:black;
-	display:inline-block;
-	margin:0.1em 0 0 1em;
+#title h1 {
+    font-size: 100px;
+    text-decoration: none;
+    color: black;
+    display: inline-block;
+    margin: 0.1em 0 0 1em;
 }
 
-#title p{
-	text-decoration: none;
-	color: #000;
-	float: right;
-	display: inline-block;
-	font-size:20px;
-	padding: 0;
-	margin:0;
+#title p {
+    text-decoration: none;
+    color: #000;
+    float: right;
+    display: inline-block;
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
 
 }
 
 #monthList {
-	width: 20% !important;
+    width: 20% !important;
 }
+
 #monthList button {
-	border:1px solid; /* #{{MonthsSentiment}} */
-	padding:.5em .5em;
-	font-size: 25px;
-  width: 33%;
+    border: 1px solid; /* #{{MonthsSentiment}} */
+    padding: .5em .5em;
+    font-size: 25px;
+    width: 33%;
 }
 
 .c3-chart > * {
     cursor: help !important;
 }
 
-.DocTitle{
-	padding-top:1em;
-	margin-bottom:5px;
-	float:none;}
-.DocAuthorAndDate{
-	display:block;
-	margin-top:-3px;
-	padding-bottom:2px;}
+.DocTitle {
+    padding-top: 1em;
+    margin-bottom: 5px;
+    float: none;
+}
 
-.DocBody
+.DocAuthorAndDate {
+    display: block;
+    margin-top: -3px;
+    padding-bottom: 2px;
+}
