--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -22,6 +22,15 @@ body {
     height: auto;
 }
 
+.clearfix:before,
+.clearfix:after {
+    content: ".";    
+    display: block;    
+    height: 0;    
+    overflow: hidden; 
+}
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; } /* IE < 8 */
 h2, h3, h5, h4 {
     font-family: 'Georgia', sans-serif;
 }
@@ -127,20 +136,13 @@ p {
 
 .major-news {
     border: 1px solid #ADABAB;
-    padding: 2em 3em 2em 3em;
+	background-color: #ffffff;
+	margin:1em 1em 1em 1em;
     -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
     -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
     box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
 }
 
-.major-news {
-    border: 1px solid #ADABAB;
-    background-color: #ffffff;
-    padding: 2em 3em 2em 3em;
-    -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
-    -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
-    box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
-}
 
 .major-news h2 {
     text-align: center;
@@ -149,6 +151,7 @@ p {
 .major-news p {
     text-align: justify;
 }
+
 
 #title h1 {
     font-size: 100px;
@@ -176,15 +179,24 @@ p {
 	overflow:scroll;
 	margin:.5em 2em .5em 2em;
 		}
-.demo column{width:23.5% !important;}
+
 .demo span {
 	display:table-cell;
 	text-align:center;
-	margin:.5em .5em .5em .5em !important;
 	border: .5px solid white;
-	border-radius:10px;
+	border-radius:5px;
 		}
     
+.column-customize{
+	margin-right:-2em;
+	margin-bottom:1em !important;}
+
+.customize-color{
+	width:100%;
+	padding:0 2em 0 2em;
+	margin-top:1em;
+	height:20px;
+	}
 
 #monthList {
     width: 20% !important;
