--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -116,11 +116,11 @@ p {
 
 #tagCloud {
     width: 75%;
-    height: auto;
+    height: 240px;
     border: #A6A6A6 1px solid;
     background-color: #FFFFFF;
     padding: 1em 1em;
-
+    overflow-y: scroll;
 }
 
 #tagCloud span {
