--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -120,7 +120,7 @@ p {
     border: #A6A6A6 1px solid;
     background-color: #FFFFFF;
     padding: 1em 1em;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #tagCloud span {
