--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -195,6 +195,15 @@ p {
 	margin-top:1em;
 	height:20px;
 	}
+.customize-color-obiturary
+	{
+	width:100%;
+	padding:0 2em 0 2em;
+	margin-top:1em;
+	height:20px;
+	color:#2A2929;
+	}
+
 
 #monthList {
     width: 20% !important;
