--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -11,15 +11,27 @@
 }
 
 body {
+    background-color: #E7C6A5;
+}
+
+#newspaper {
     padding: 0em 5em 5em 5em;
     font-family: 'Georgia', serif;
     background: url(../images/bg.jpg) repeat;
-    margin: 0 auto;
     width: 80%;
     -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
     -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
     box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.53);
     height: auto;
+    display: inline-block;
+}
+#pinboard {
+    position: absolute;
+    width: 20%;
+    height: 100%;
+    display: inline-block;
+    right: 0;
+    top: 0;
 }
 
 .clearfix:before,
@@ -72,9 +84,13 @@ p {
 .label {
     margin: .5em 1 .5em 0 !important;
 }
+
 .label-customize{
 	margin-left:1.2em !important;
-	}
+}
+#pinboard .label-customize {
+    margin-top: 1.2em !important;
+}
 
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -192,7 +208,7 @@ p {
 	margin:.5em 2em .5em 2em;
 		}
 
-.demo span {
+.demo div[class*="-news"] {
 	display:table-cell;
 	text-align:center;
 	border: .5px solid white;
