--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -289,6 +289,7 @@ padding:3em 3em;
 }
 
 #modal {
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.53)
     position: fixed;
     top: 25%;
     left: 25%;
